# Lamas-Finance-Magic-Eden-Hackathon

./: Cargo.toml  README.md  package-lock.json  package.json
client/: jackpot_lottery.json  jackpot_lottery.ts  lucky_spinner.json  lucky_spinner.ts  price_predict.json  price_predict.ts  up_or_down.json  up_or_down.ts
client/jackpot-lottery/: buy.ts  claim.ts  clearRoundResult.ts  config.ts  finalizeRound.ts  init.ts  next.ts  rollLottery.ts
client/lucky-spinner/: config.ts  init.ts  log.ts  spin.ts
client/price-predict/: claim.ts  compute-end.ts  compute-start.ts  config.ts  init.ts  next.ts  predict.ts
client/up-or-down/: cancel.ts  claim.ts  clearRoundResult.ts  config.ts  createRound.ts  init.ts  liveStageBegin.ts  liveStageEnd.ts  predict.ts  startRound.ts
contracts/jackpot-lottery/: Cargo.toml
contracts/jackpot-lottery/src/: account.rs  error.rs  random.rs  state.rs
contracts/lucky-spinner/: Cargo.toml
contracts/price-predict/: Cargo.toml
contracts/price-predict/src/: account.rs  error.rs  lib.rs  state.rs
contracts/up-or-down/: Cargo.toml
contracts/up-or-down/src/: account.rs  decimal.rs  error.rs  state.rs
vrf/: Cargo.toml  Dockerfile  vrf-config.toml
vrf-lib/: Cargo.toml
vrf/migrations/2022-10-07-170645_create_table/: down.sql  up.sql
vrf/src/: db.rs  error.rs  main.rs  parse_log.rs
vrf/src/task/: mod.rs  vrf.rs
