[package]
name = "lucky-spinner"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lucky_spinner"

[dependencies]
anchor-lang = { workspace = true, features = [ "init-if-needed" ] }
anchor-spl = { workspace = true }
vrf-lib = { workspace = true }
