[package]
name = "up-or-down"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "up_or_down"

[features]
default = []
timing-error = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
chainlink_solana = { workspace = true }
